<resources>
    <string name="app_name">RNGrocery</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here</string>
    <string name="password">Password</string>
    <string name="sign_in_with_your_account">Sign in with your account</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_click_here">Already have an account? Click here</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up_for_an_account">Sign up for an account</string>
    <string name="welcome">Welcome,</string>
    <string name="user">User</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="integrated_sqlite_database_for_seamless_tracking_and_management_of_items">Integrated SQLite database for seamless tracking and management of items.</string>
    <string name="grocery_tracker">Grocery Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_stock">Add Stock</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="taxable">Taxable</string>
    <string name="nontaxable">NonTaxable</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="quantity_sold">Quantity Sold</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_name">Customer Name</string>
    <string name="sales">Sales</string>
    <string name="item_code">Item Code</string>
    <string name="dd_mm_yy">dd / mm / yy</string>
    <string name="list_of_stocks">Available Stock</string>
    <string name="textview">TextView</string>
    <string name="quantity_purchased">Quantity Purchased</string>
    <string name="purchase">Purchase</string>
    <string name="search">Search</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="price2">Price:</string>
    <string name="quantity2">Quantity:</string>
</resources>