<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PurchaseFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="89dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="89dp"
            android:text="@string/purchase"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemCodeLayout"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/item_code"
            android:textColorHint="@color/grey"
            app:boxBackgroundColor="@color/grey_black"
            app:boxBackgroundMode="filled"
            app:boxCollapsedPaddingTop="8dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:cursorColor="@color/light_yellow"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edItemCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantityPurchasedLayout"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/quantity_purchased"
            android:textColorHint="@color/grey"
            app:boxBackgroundColor="@color/grey_black"
            app:boxBackgroundMode="filled"
            app:boxCollapsedPaddingTop="8dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:cursorColor="@color/light_yellow"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCodeLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edQuantityPurchased"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/dd_mm_yy"
            android:textColorHint="@color/grey"
            app:boxBackgroundColor="@color/grey_black"
            app:boxBackgroundMode="filled"
            app:boxCollapsedPaddingTop="8dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:cursorColor="@color/light_yellow"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantityPurchasedLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="TextContrastCheck" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateLayout">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/custom_save_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteY="506dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/custom_cancel_button"
                android:text="@string/cancel"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteY="506dp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>